--- a/crud/package.json
+++ b/crud/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "joi": "^17.9.1",
+    "mongoose": "^7.0.3",
     "mysql2": "^3.2.0",
     "sequelize": "^6.30.0"
   },
