fix docker compose

--- a/crud/.env.example
+++ b/crud/.env.example
@@ -2,6 +2,13 @@ NODE_ENV=development
 PORT=3000
 HOST=localhost
 
+# you can choose mongodb or mysql in here
+DATABASE_APP=mongodb
+
+# MONGODB
+MONGODB_URL=mongodb://root:password@localhost:27017/db_test
+
+#MYSQL
 DB_DIALECT=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
