--- a/websocket/package.json
+++ b/websocket/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
