--- a/crud/.env
+++ b/crud/.env
@@ -3,7 +3,7 @@ PORT=3000
 HOST=0.0.0.0
 
 # you can choose mongodb or mysql in here
-DATABASE_APP=mysql
+DATABASE_APP=mongodb
 
 # MONGODB
 MONGODB_URL=mongodb://root:password@mongodb:27017/db_test
